# keyboardMidi-try1

./: .gitignore  ARCHITECTURE_CONTEXT.md  CMakeLists.txt  README.md  UI_STATE_PERSISTENCE_PROMPT.md  notes.md  readme.md
.cursor/plans/: reorganize-command-options_e5278263.plan.md  touchpad-layout-expansion_c3951aab.plan.md
.cursor/rules/: attention-format.mdc  touchpad-layout-guide.mdc
Development/: AI-build-and-test-guide.md  Encoder Implementation plan.md  KeyboardZones-JankoLayout.md  Pahse 56.1.md  Pahse 56.2.md  Phase 1.md  Phase 11.md  Phase 12.md  Phase 15.md  Phase 16.1.md  Phase 16.2.md  Phase 16.4.md  Phase 16.8.md  Phase 16.9.md  Phase 17.1.md  Phase 17.3.md  Phase 17.md  Phase 18.1.md  Phase 18.10.md  Phase 18.11.md  Phase 18.2.md  Phase 18.3.md  Phase 18.7.md  Phase 18.md  Phase 20.md  Phase 21.1.md  Phase 22.3.md  Phase 23.1 - expression engine logic.md  Phase 23.2 - Expression UI.md  Phase 23.3 - Expression optimization.md  Phase 23.5 - logic fix for pitch.md  Phase 23.5.1 - double scale fix.md  Phase 23.6 - scale based pitch bend.md  Phase 26.2.md  Phase 27.1.md  Phase 27.2.md  Phase 27.3.md  Phase 3.md  Phase 30.2.md  Phase 31.1.md  (+80 more)
Development/Done/: Pahse 55.1.md  Pahse 55.10.md  Pahse 55.11.md  Pahse 55.2.md  Pahse 55.3.md  Pahse 55.4.md  Pahse 55.5.md  Pahse 55.6.md  Pahse 55.7.md  Pahse 55.8.md  Pahse 55.9.md  Phase 1.md  Phase 10.md  Phase 11.md  Phase 12.md  Phase 13.md  Phase 14.md  Phase 15.1.md  Phase 15.2.md  Phase 15.md  Phase 16.1.md  Phase 16.10.md  Phase 16.3.md  Phase 16.5.md  Phase 16.6.md  Phase 16.7.md  Phase 16.8.md  Phase 16.9.md  Phase 16.md  Phase 17.1.md  Phase 17.2.md  Phase 17.4.md  Phase 17.md  Phase 18.1.md  Phase 18.11.md  Phase 18.2.md  Phase 18.3.md  Phase 18.4.md  Phase 18.5.md  Phase 18.6.md  (+112 more)
Development/Later/show better key name/: Phase 36 - show better name for keys.md  Phase 36.1.md  Phase 36.2.md  Phase 36.3.md  Phase 36.4.md  Phase 36.5 - Temporary Revert.md
Development/My Notes/: My Mappings Guide.md
Development/NO/: Phase 21.md  Phase 22.1.md  Phase 22.2.md  Phase 22.3.md  Phase 22.4.md  Phase 22.5.md  Phase 23.md
Development/NO/device-wise-hook-passthrough/: Phase 27.1.md  Phase 27.2.md  Phase 27.3.md  Phase 27.4.md  Phase 27.5.md  Phase 27.6.md  Phase 27.7.md  Phase 27.8.md
Source/: ChordUtilities.cpp  ChordUtilities.h  ColourContrast.cpp  ColourContrast.h  CrashLogger.cpp  CrashLogger.h  DetachableContainer.cpp  DetachableContainer.h  DeviceManager.cpp  DeviceManager.h  DeviceSetupComponent.cpp  DeviceSetupComponent.h  ExpressionEngine.cpp  ExpressionEngine.h  GlobalPerformancePanel.cpp  GlobalPerformancePanel.h  GridCompiler.cpp  GridCompiler.h  InputProcessor.cpp  InputProcessor.h  KeyChipList.cpp  KeyChipList.h  KeyNameUtilities.cpp  KeyNameUtilities.h  KeyboardLayoutUtils.cpp  KeyboardLayoutUtils.h  KeyboardMappingEditorComponent.cpp  KeyboardMappingEditorComponent.h  KeyboardMappingInspector.cpp  KeyboardMappingInspector.h  KeyboardMappingInspectorLogic.cpp  KeyboardMappingInspectorLogic.h  LayerListPanel.cpp  LayerListPanel.h  LogComponent.cpp  LogComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  MappingCompiler.cpp  (+106 more)
Source/Benchmarks/: BenchmarkFixtures.h  MidiProcessingBenchmarks.cpp
Source/Tests/: ChordUtilitiesTests.cpp  ColourContrastTests.cpp  CrashLoggerTests.cpp  DeviceManagerTests.cpp  GridCompilerTests.cpp  InputProcessorTests.cpp  MappingCompilerTests.cpp  MappingDefinitionTests.cpp  MappingInspectorLogicTests.cpp  MidiPerformanceModeTests.cpp  PitchPadUtilitiesTests.cpp  SanityTest.cpp  TouchpadEditorLogicTests.cpp  TouchpadTabTests.cpp  UiStatePersistenceTests.cpp  ZonePresetsTests.cpp  ZonePropertiesLogicTests.cpp  ZoneTests.cpp
branding/: logo only 512 (transparent).af  logo with name.af
build-debug/: cmake_test_discovery_a3b142c1e5.json
build-debug/OmniKey_rc_lib.dir/Debug/: OmniKey_rc_lib.vcxproj.FileListAbsolute.txt  OmniKey_resources.res
build-debug/Testing/Temporary/: CTestCostData.txt
