cmake_minimum_required(VERSION 3.22)

# 1. Project Setup
project(OmniKey VERSION 1.0.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# 2. Add GoogleTest
include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
)
# For Windows: Prevent GTest from overriding /MD with /MT
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

# 3. Add JUCE
add_subdirectory(JUCE)

# 4. Create the Core Static Library (Business Logic)
add_library(OmniKey_Core STATIC
    Source/GridCompiler.cpp
    Source/InputProcessor.cpp
    Source/MappingDefinition.cpp
    Source/PresetManager.cpp
    Source/DeviceManager.cpp
    Source/ZoneManager.cpp
    Source/Zone.cpp
    Source/ScaleLibrary.cpp
    Source/SettingsManager.cpp
    Source/MidiEngine.cpp
    Source/VoiceManager.cpp
    Source/RawInputManager.cpp
    Source/PointerInputManager.cpp
    Source/ExpressionEngine.cpp
    Source/PortamentoEngine.cpp
    Source/StrumEngine.cpp
    Source/RhythmAnalyzer.cpp
    Source/ChordUtilities.cpp
    Source/ScaleUtilities.cpp
    Source/KeyNameUtilities.cpp
    Source/MidiNoteUtilities.cpp
    Source/KeyboardLayoutUtils.cpp
)

# 3a. Link Libraries to Core
# Use PUBLIC so that anyone linking to OmniKey_Core also gets JUCE include paths
# (needed because Core headers like MappingTypes.h expose JUCE types)
target_link_libraries(OmniKey_Core PUBLIC
    juce::juce_core
    juce::juce_events
    juce::juce_audio_basics
    juce::juce_audio_devices
    juce::juce_graphics
    juce::juce_data_structures  # Required for ValueTree
    user32
    hid
    setupapi
)

# 3b. Set include directories for Core
target_include_directories(OmniKey_Core PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/Source
)

# 3c. Compile definitions for Core
target_compile_definitions(OmniKey_Core PRIVATE
    NOMINMAX
    WIN32_LEAN_AND_MEAN
)
# Allow parallel compiles to write to same PDB (avoids C1041)
if(MSVC)
  target_compile_options(OmniKey_Core PRIVATE /FS)
endif()

# 5. Create the GUI App
juce_add_gui_app(OmniKey
    PRODUCT_NAME "OmniKey"
    VERSION 1.0.0
    COMPANY_NAME "OmniKey"
    NEEDS_STANDALONE_SHELL FALSE
)

# --- THIS IS THE MISSING MAGIC LINE ---
juce_generate_juce_header(OmniKey)
# --------------------------------------

# 5a. Add JuceHeader.h path to Core (needed because Core headers include JuceHeader.h)
# The header is generated by the GUI app target, so we reference its artefact directory
# We do this after the GUI app is created so we can reference its properties
get_target_property(juce_library_code OmniKey JUCE_GENERATED_SOURCES_DIRECTORY)
if(juce_library_code)
    target_include_directories(OmniKey_Core PRIVATE ${juce_library_code})
endif()

# 6. Source Files (UI/Main only)
target_sources(OmniKey PRIVATE
    Source/Main.cpp
    Source/MainComponent.cpp
    Source/MappingEditorComponent.cpp
    Source/VisualizerComponent.cpp
    Source/ZoneEditorComponent.cpp
    Source/SettingsPanel.cpp
    Source/LayerListPanel.cpp
    Source/ZoneListPanel.cpp
    Source/ZonePropertiesPanel.cpp
    Source/GlobalPerformancePanel.cpp
    Source/LogComponent.cpp
    Source/DeviceSetupComponent.cpp
    Source/MappingInspector.cpp
    Source/DetachableContainer.cpp
    Source/KeyChipList.cpp
    Source/MiniStatusWindow.cpp
    Source/QuickSetupWizard.cpp
    Source/StartupManager.cpp
    Source/ScaleEditorComponent.cpp
    Source/MusicalKeyboardComponent.cpp
)

# 7. Definitions (Fixes Macro Hell globally)
target_compile_definitions(OmniKey PRIVATE
    NOMINMAX
    WIN32_LEAN_AND_MEAN
    JUCE_WEB_BROWSER_PATH=""
)

# 8. Include Directories (so OmniKey can find headers in Source/)
target_include_directories(OmniKey PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/Source
)

# 9. Link Libraries
target_link_libraries(OmniKey PRIVATE
    OmniKey_Core
    juce::juce_core
    juce::juce_gui_basics
    juce::juce_gui_extra   # Required for ColourSelector
    juce::juce_graphics
    juce::juce_events
    juce::juce_audio_basics   # Required for MidiMessage
    juce::juce_audio_devices  # Required for MidiOutput
)

# --- UNIT TESTS ---

# 10. Enable CTest
enable_testing()

# 11. Define the Test Runner Exe
add_executable(OmniKey_Tests
    Source/Tests/SanityTest.cpp
    Source/Tests/GridCompilerTests.cpp
    Source/Tests/InputProcessorTests.cpp
    Source/Tests/MappingDefinitionTests.cpp
)

# 12. Link Dependencies
# We link against our Core library (logic) and GTest
target_link_libraries(OmniKey_Tests PRIVATE
    OmniKey_Core
    GTest::gtest_main # Provides a standard main() that runs all tests
)

# 12a. Include Directories for Tests
# MappingTypes.h includes <JuceHeader.h>, which is generated by the GUI App target
# Add the artefact path so tests can find it
target_include_directories(OmniKey_Tests PRIVATE
    ${CMAKE_BINARY_DIR}/OmniKey_artefacts/JuceLibraryCode
)

# 13. Register with CTest
include(GoogleTest)
gtest_discover_tests(OmniKey_Tests)