cmake_minimum_required(VERSION 3.22)

# 1. Project Setup
project(MIDIQy VERSION 1.0.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# 2. Add GoogleTest
include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
)
# For Windows: Prevent GTest from overriding /MD with /MT
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

# 2b. Add Google Benchmark
FetchContent_Declare(
  benchmark
  GIT_REPOSITORY https://github.com/google/benchmark.git
  GIT_TAG v1.8.3
)
set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "" FORCE)
set(BENCHMARK_ENABLE_GTEST_TESTS OFF CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(benchmark)

# 3. Add JUCE
add_subdirectory(JUCE)

# 4. Create the Core Static Library (Business Logic)
add_library(MIDIQy_Core STATIC
    Source/GridCompiler.cpp
    Source/InputProcessor.cpp
    Source/MappingDefinition.cpp
    Source/MappingInspectorLogic.cpp
    Source/PitchPadUtilities.cpp
    Source/PresetManager.cpp
    Source/DeviceManager.cpp
    Source/ZoneManager.cpp
    Source/Zone.cpp
    Source/ScaleLibrary.cpp
    Source/SettingsManager.cpp
    Source/MidiEngine.cpp
    Source/VoiceManager.cpp
    Source/RawInputManager.cpp
    Source/PointerInputManager.cpp
    Source/TouchpadHidParser.cpp
    Source/ExpressionEngine.cpp
    Source/PortamentoEngine.cpp
    Source/StrumEngine.cpp
    Source/RhythmAnalyzer.cpp
    Source/ChordUtilities.cpp
    Source/ScaleUtilities.cpp
    Source/KeyNameUtilities.cpp
    Source/MidiNoteUtilities.cpp
    Source/KeyboardLayoutUtils.cpp
    Source/ColourContrast.cpp
    Source/ZoneDefinition.cpp
    Source/ZonePropertiesLogic.cpp
    Source/TouchpadMixerManager.cpp
    Source/TouchpadMixerDefinition.cpp
)

# 3a. Link Libraries to Core
# Use PUBLIC so that anyone linking to MIDIQy_Core also gets JUCE include paths
# (needed because Core headers like MappingTypes.h expose JUCE types)
target_link_libraries(MIDIQy_Core PUBLIC
    juce::juce_core
    juce::juce_events
    juce::juce_audio_basics
    juce::juce_audio_devices
    juce::juce_graphics
    juce::juce_data_structures  # Required for ValueTree
    user32
    hid
    setupapi
)

# 3b. Set include directories for Core
target_include_directories(MIDIQy_Core PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/Source
)

# 3c. Compile definitions for Core
target_compile_definitions(MIDIQy_Core PRIVATE
    NOMINMAX
    WIN32_LEAN_AND_MEAN
)
# Allow parallel compiles to write to same PDB (avoids C1041)
if(MSVC)
  target_compile_options(MIDIQy_Core PRIVATE /FS)
endif()

# 5. Create the GUI App
juce_add_gui_app(MIDIQy
    PRODUCT_NAME "MIDIQy"
    VERSION 1.0.0
    COMPANY_NAME "Md. Zunaid Farouque"
    COMPANY_WEBSITE "https://github.com/zunaidFarouque"
    ICON_BIG "${CMAKE_CURRENT_SOURCE_DIR}/branding/logo only 512 (transparent).png"
    ICON_SMALL "${CMAKE_CURRENT_SOURCE_DIR}/branding/logo only 512 (transparent).png"
    NEEDS_STANDALONE_SHELL FALSE
)

# --- THIS IS THE MISSING MAGIC LINE ---
juce_generate_juce_header(MIDIQy)
# --------------------------------------

# 5a. Add JuceHeader.h path to Core (needed because Core headers include JuceHeader.h)
# The header is generated by the GUI app target, so we reference its artefact directory.
# Ensure the header is generated before Core compiles by depending on a target that triggers it.
get_target_property(juce_library_code MIDIQy JUCE_GENERATED_SOURCES_DIRECTORY)
if(juce_library_code)
    target_include_directories(MIDIQy_Core PRIVATE ${juce_library_code})
    add_custom_target(MIDIQy_juce_header DEPENDS "${juce_library_code}/JuceHeader.h")
    add_dependencies(MIDIQy_Core MIDIQy_juce_header)
endif()

# 6. Source Files (UI/Main only)
target_sources(MIDIQy PRIVATE
    Source/Main.cpp
    Source/MainComponent.cpp
    Source/MappingEditorComponent.cpp
    Source/VisualizerComponent.cpp
    Source/ZoneEditorComponent.cpp
    Source/SettingsPanel.cpp
    Source/SettingsDefinition.cpp
    Source/LayerListPanel.cpp
    Source/ZoneListPanel.cpp
    Source/ZonePropertiesPanel.cpp
    Source/TouchpadMixerListPanel.cpp
    Source/TouchpadMixerEditorComponent.cpp
    Source/TouchpadTabComponent.cpp
    Source/GlobalPerformancePanel.cpp
    Source/LogComponent.cpp
    Source/DeviceSetupComponent.cpp
    Source/MappingInspector.cpp
    Source/DetachableContainer.cpp
    Source/KeyChipList.cpp
    Source/MiniStatusWindow.cpp
    Source/TouchpadVisualizerPanel.cpp
    Source/QuickSetupWizard.cpp
    Source/StartupManager.cpp
    Source/ScaleEditorComponent.cpp
    Source/MusicalKeyboardComponent.cpp
    Source/TouchpadRelayoutDialog.cpp
)

# 7. Definitions (Fixes Macro Hell globally)
target_compile_definitions(MIDIQy PRIVATE
    NOMINMAX
    WIN32_LEAN_AND_MEAN
    JUCE_WEB_BROWSER_PATH=""
)
# 7a. MSVC: allow parallel compilation (avoid C1041 PDB lock)
if(MSVC)
  target_compile_options(MIDIQy PRIVATE /FS)
endif()

# 8. Include Directories (so MIDIQy can find headers in Source/)
target_include_directories(MIDIQy PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/Source
)

# 9. Link Libraries
target_link_libraries(MIDIQy PRIVATE
    MIDIQy_Core
    juce::juce_core
    juce::juce_gui_basics
    juce::juce_gui_extra   # Required for ColourSelector
    juce::juce_graphics
    juce::juce_events
    juce::juce_audio_basics   # Required for MidiMessage
    juce::juce_audio_devices  # Required for MidiOutput
)

# --- UNIT TESTS ---

# 10. Enable CTest
enable_testing()

# 11. Define the Test Runner Exe
add_executable(MIDIQy_Tests
    Source/Tests/SanityTest.cpp
    Source/Tests/ChordUtilitiesTests.cpp
    Source/Tests/MidiPerformanceModeTests.cpp
    Source/Tests/ColourContrastTests.cpp
    Source/Tests/GridCompilerTests.cpp
    Source/Tests/PitchPadUtilitiesTests.cpp
    Source/Tests/InputProcessorTests.cpp
    Source/Tests/MappingDefinitionTests.cpp
    Source/Tests/MappingInspectorLogicTests.cpp
    Source/Tests/ZonePropertiesLogicTests.cpp
    Source/Tests/ZoneTests.cpp
)

# 12. Link Dependencies
# We link against our Core library (logic) and GTest
target_link_libraries(MIDIQy_Tests PRIVATE
    MIDIQy_Core
    GTest::gtest_main # Provides a standard main() that runs all tests
)

# 12a. Include Directories for Tests
# MappingTypes.h includes <JuceHeader.h>, which is generated by the GUI App target
# Add the artefact path so tests can find it
target_include_directories(MIDIQy_Tests PRIVATE
    ${CMAKE_BINARY_DIR}/MIDIQy_artefacts/JuceLibraryCode
)

# 12b. MSVC: allow parallel compilation of test .cpp files (avoid PDB lock)
if(MSVC)
  target_compile_options(MIDIQy_Tests PRIVATE /FS)
endif()
set_target_properties(MIDIQy_Tests PROPERTIES OUTPUT_NAME "MIDIQy_Tests")

# 13. Register with CTest
include(GoogleTest)
gtest_discover_tests(MIDIQy_Tests)

# --- BENCHMARKS ---

# 14. Define the Benchmark Runner Exe
add_executable(MIDIQy_Benchmarks
    Source/Benchmarks/MidiProcessingBenchmarks.cpp
)

# 15. Link Dependencies
target_link_libraries(MIDIQy_Benchmarks PRIVATE
    MIDIQy_Core
    benchmark::benchmark
    benchmark::benchmark_main
)

# 15a. Include Directories for Benchmarks
target_include_directories(MIDIQy_Benchmarks PRIVATE
    ${CMAKE_BINARY_DIR}/MIDIQy_artefacts/JuceLibraryCode
)

# 15b. MSVC: allow parallel compilation (avoid PDB lock)
if(MSVC)
  target_compile_options(MIDIQy_Benchmarks PRIVATE /FS)
endif()
set_target_properties(MIDIQy_Benchmarks PROPERTIES OUTPUT_NAME "MIDIQy_Benchmarks")

# 15c. Benchmarks: run manually (e.g. build-debug/Debug/MIDIQy_Benchmarks.exe).
#      Not registered with CTest to avoid segfault in headless/CI environment.